# CloudGlimpseRust

./: .gitignore  README.md  index.html  serve.py
.github/workflows/: azure-static-web-apps-red-sea-01495c810.yml
assets/shaders/: PointMaterial.wgsl
cloud_glimpse/: Cargo.toml  git_script.sh  index.html  serve.py
cloud_glimpse/assets/shaders/: PointMaterial.wgsl
cloud_glimpse/pkg/: cloud_glimpse.d.ts  cloud_glimpse.js  cloud_glimpse_bg.wasm.d.ts  package.json
cloud_glimpse/src/: PointMaterial.wgsl  \  bevy.rs  index.html  lib.rs  main.py  main.rs  shader.wgsl
cloud_glimpse/src/las_file_handler/: las_file_parser.rs  mod.rs
cloud_glimpse/src/las_visualization/: bevy_setup.rs  point_creation.rs
cloud_glimpse/src/temp/: lib.rs  main.rs
cloud_glimpse/src/website/: about.html  index.html  index.js
cloud_glimpse/src/website/points/: points.las:Zone.Identifier
cloud_glimpse/src/website/styles/: styles.css
html/: about.html
js/: index.js
pkg/: cloud_glimpse.js  cloud_glimpse_bg.js  cloud_glimpse_bg.wasm.d.ts
scripts/: dockerfile
src/: lib.rs
src/desktop_code/: main.rs
src/las_file_handler/: las_file_parser.rs  mod.rs
src/las_visualization/: bevy_setup.rs  mod.rs  point_creation.rs
styles/: styles.css
website/html/: about.html
website/js/: index.js
website/styles/: styles.css
